# GOD_Project

./: Cargo.toml  build.rs
assets/test/media/audio/: creepy-halloween-bell-trap-melody-247720.mp3:Zone.Identifier
assets/test/text/: test.txt
assets/web/text/: all_media_links.txt  all_text_links.txt  game_arts.txt  just_audio.txt  stainedglass.txt
configs/: config.toml  config_1.toml  config_10.toml  config_2.toml  config_3.toml  config_4.toml  config_5.toml  config_6.toml  config_7.toml  config_8.toml  config_9.toml  topology_1.toml  topology_10.toml  topology_2.toml  topology_3.toml
project/client/: Cargo.toml
project/client/src/: chat_client.rs  lib.rs  web_browser.rs
project/fragmentation_handling/src/: lib.rs
project/server/: Cargo.toml
project/server/src/: lib.rs
project/topology/src/: lib.rs
src/: frontend.rs  main.rs  utils.rs
src/frontend/: README.md  chat_gui.rs  web_gui.rs
src/utils/: README.md  backup_server.rs  client.rs  controller.rs  fragmentation_handling.rs  initializer.rs  server.rs  simulation_controller.rs  topology.rs
src/utils/client/: README.md  chat_client.rs  web_browser.rs
src/utils/controller/: components.rs  logic.rs  setup.rs  systems.rs
